--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "moment": "^2.22.1",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "serve-favicon": "^2.5.0"
   }
 }
